updated css and javascript

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <footer>
         <p>&#169;Liam Burke</p>
     </footer>
-    <script src="/CODE Lancs pratice /helloworld.js"></script>
+    <script src="/helloworld.js"></script>
 </body>
 </html>
 
